tests/NormalTests/paczka1/fuzzy1/90351002.err
Error in line 2: HY4kqxpZ3Sd A734 33,8
Error in line 7: FeG A734 6,,0
Error in line 3: FeG A734 3,4
Error in line 14: A87 S283 81,5
Error in line 10: BHQNqmHMaXF S765 31,8
Error in line 29: JS95 A734 48,1
Error in line 35: anqm A734 22,21
Error in line 23: HY4kqxpZ3Sd S765 32,0
Error in line 36: BHQNqmHMaXF A734 12,5
